--- a/Views/Pessoa/Pessoa.html
+++ b/Views/Pessoa/Pessoa.html
@@ -24,16 +24,18 @@
         <input type="text" id="NOME" maxlength="100" minlength="3" required><br>
 
         <!-- CURSO -->
-        <label for="CURSO">Curso:</label>
-        <input type="text" id="CURSO" maxlength="100" required><br>
+        <label for="ID_CURSO">Curso:</label>
+        <select id="ID_CURSO" required>
+            <option></option>
+        </select><br>
 
         <!-- FORMACAO -->
-        <label for="FORMACAO">Formação:</label>
-        <input type="text" id="FORMACAO" maxlength="100" required><br>
+        <label for="ID_FORMACAO">Formação:</label>
+        <select id="ID_FORMACAO" multiple required></select><br>
 
         <!-- ARQUIVO -->
-        <label for="ARQUIVO">Comprovante de título:</label>
-        <input type="text" id="ARQUIVO" maxlength="100" required><br>
+        <label for="ARQUIVO" style="font-weight: normal" >Comprovante de título:</label>
+        <input type="text" id="ARQUIVO" maxlength="100" ><br>
 
         <!-- OBSERVACAO -->
         <label for="OBSERVACAO" style="font-weight: normal">Observação:</label>
